Refactor with DTOs